[package]
name = "remarkable-events"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = """
Asynchronous Pen events for Remarkable
"""
repository = "https://github.com/niroco/remarkable-events-rs"
documentation = "https://docs.rs/remarkable-events"


[dependencies]
byteorder = "1.4.3"
tokio = { version = "1.10.1", default-features = false, features = [ "fs", "io-util" ] }


[dev-dependencies]
tokio = { version = "1.10.1", default-features = false, features = [ "rt", "fs", "io-util" ] }