[package]
name = "remarkable-events"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = """
Asynchronous Pen events for Remarkable
"""
repository = "https://github.com/niroco/remarkable-events-rs"
documentation = "https://docs.rs/remarkable-events"


[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = [ "std" ] }
mouce = "0.2.42"
serde = { version = "1.0.163", features = [ "derive" ] }
thiserror = "1.0.40"
tokio = { version = "1", default-features = false, features = [ "fs", "io-util", "macros", "time" ] }


[dev-dependencies]
tokio = { version = "1", default-features = false, features = [ "rt", "fs", "io-util", "net" ] }
